buildscript {
  repositories {
    maven {
      url  "https://dl.bintray.com/dua3/public"
    }  
  }
  dependencies {
    classpath group: 'com.dua3.gradle.jpms', name: 'JpmsGradlePlugin', version: '0.2.1'
  }
}

apply plugin: 'java'
apply plugin: 'com.dua3.gradle.jpms'

// Show the version of Java
println("Java version: "+JavaVersion.current());

sourceCompatibility = 9
targetCompatibility = 9

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
}

repositories {
    jcenter()
    maven { url  "https://dl.bintray.com/dua3/public" }
}

dependencies {
    // utility - collection  of utility classes (my own code)  [ASL 2.0]
    compile group: 'com.dua3.utility', name: 'utility', version: '0.11.3'

    // Log4j2
    compile     group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.10.0'
    compile     group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.10.0'

    // FontAwesomeFX - icon collection [FontAweSomeFX: ASL 2.0, FontAweSome: SIL OFL 1.1 / Creative Commons]
    compile 'de.jensd:fontawesomefx-fontawesome:4.7.0-9.1.2-jdk8-1'
        
    // JUnit - unit testing [EPL]
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

sourceSets {
  main {
    resources {
        srcDirs = ["src/main/java"]
    }
    resources {
        srcDirs = ["src/main/resources"]
        includes = []
    }
  }
}

// TODO remove once all dependencies are modularized
compileJava {
    doFirst {
        options.compilerArgs = [
            '--module-path', classpath.asPath,
            '--add-modules', 'ALL-SYSTEM',
            '-d', sourceSets.main.output.classesDirs.asPath
        ]
    }
}

jlink {
	module = 'com.dua3.fxbrowser'
	main = 'com.dua3.fxbrowser.FxBrowser'
	application = 'fxbrowser'
	compress = 2
}
